--- a/src/gui/connection/ConnectionWidget.ui
+++ b/src/gui/connection/ConnectionWidget.ui
@@ -26,12 +26,37 @@
    <string>Connection</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <item row="2" column="0">
+    <widget class="cams::gui::components::CustomLabeledInputTextField" name="login" native="true"/>
+   </item>
+   <item row="1" column="0">
+    <widget class="cams::gui::components::CustomNotificationWidget" name="errorMessage" native="true"/>
+   </item>
+   <item row="0" column="0" alignment="Qt::AlignHCenter">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Sign in to CAMS</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
     <widget class="cams::gui::components::ValidationButton" name="ConnectionButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>40</height>
+      </size>
+     </property>
      <property name="text">
       <string>Connection</string>
      </property>
     </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="cams::gui::components::CustomLabeledInputTextField" name="password" native="true"/>
    </item>
   </layout>
  </widget>
@@ -40,6 +65,18 @@
    <class>cams::gui::components::ValidationButton</class>
    <extends>QPushButton</extends>
    <header>components/ValidationButton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>cams::gui::components::CustomNotificationWidget</class>
+   <extends>QWidget</extends>
+   <header>components/CustomNotificationWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>cams::gui::components::CustomLabeledInputTextField</class>
+   <extends>QWidget</extends>
+   <header>components/CustomLabeledInputTextField.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
