Gestion de la connection

--- a/src/gui/components/CustomNotificationWidget.ui
+++ b/src/gui/components/CustomNotificationWidget.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>cams::gui::components::CustomNotificationWidget</class>
+ <class>CustomNotificationWidget</class>
  <widget class="QWidget" name="CustomNotificationWidget">
   <property name="geometry">
    <rect>
