--- a/src/gui/components/CustomLabeledInputTextField.ui
+++ b/src/gui/components/CustomLabeledInputTextField.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>cams::gui::components::CustomLabeledInputTextField</class>
+ <class>CustomLabeledInputTextField</class>
  <widget class="QWidget" name="CustomLabeledInputTextField">
   <property name="geometry">
    <rect>
