--- a/src/gui/components/CustomLabeledInputPasswordField.ui
+++ b/src/gui/components/CustomLabeledInputPasswordField.ui
@@ -35,6 +35,9 @@
    </item>
    <item row="0" column="1">
     <widget class="QPushButton" name="forgetPasswordButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="sizePolicy">
       <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
        <horstretch>0</horstretch>
