--- a/src/gui/connection/CreateAccountWidget.ui
+++ b/src/gui/connection/CreateAccountWidget.ui
@@ -27,7 +27,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="7" column="0">
-    <widget class="QPushButton" name="newAccountButton">
+    <widget class="QPushButton" name="connectionButton">
      <property name="text">
       <string>Se connecter</string>
      </property>
@@ -53,7 +53,7 @@
     </widget>
    </item>
    <item row="6" column="0">
-    <widget class="ValidationButton" name="ConnectionButton">
+    <widget class="ValidationButton" name="createAccountButton">
      <property name="enabled">
       <bool>false</bool>
      </property>
