--- a/src/gui/main/MainWidget.ui
+++ b/src/gui/main/MainWidget.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>MainWidget</class>
  <widget class="QWidget" name="MainWidget">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>746</width>
+    <height>401</height>
+   </rect>
+  </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
@@ -12,6 +20,14 @@
    <string>Main</string>
   </property>
   <widget class="Menu" name="menu" native="true">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>100</width>
+     <height>50</height>
+    </rect>
+   </property>
    <property name="sizePolicy">
     <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
      <horstretch>0</horstretch>
@@ -25,12 +41,28 @@
     </size>
    </property>
   </widget>
+  <widget class="UserMenuWidget" name="menu_user" native="true">
+   <property name="geometry">
+    <rect>
+     <x>610</x>
+     <y>50</y>
+     <width>120</width>
+     <height>80</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <customwidgets>
   <customwidget>
    <class>Menu</class>
    <extends>QWidget</extends>
    <header>menu/Menu.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>UserMenuWidget</class>
+   <extends>QWidget</extends>
+   <header>menu/UserMenuWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
