--- a/src/gui/main/MainWindow.ui
+++ b/src/gui/main/MainWindow.ui
@@ -13,6 +13,12 @@
   <property name="windowTitle">
    <string>CAMS</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QWidget
+{
+    border: 1px solid black;
+}</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <property name="leftMargin">
